--- a/diffraction.css
+++ b/diffraction.css
@@ -30,3 +30,17 @@ p {
 .code{
 	font-family: "Lucida Console", monocode;
 }
+
+img.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a:link {
+	color:blue
+}
+
+a:visited {
+  color: blue;
+}
