--- a/diffraction.css
+++ b/diffraction.css
@@ -13,6 +13,7 @@ h1 {
 
 p {
 	text-indent: 50px;
+	line-height:150%
 }
 	
 .black{
@@ -44,4 +45,9 @@ a:link {
 
 a:visited {
   color: blue;
+}
+
+th, td {
+  padding: 20px;
+  text-align: left;
 }
